ecmascript/parser/tests/test262-error-references/fail/c7023e867afea771.js.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/c7023e867afea771.js:2:1
  |
2 | ]
  | ^

